Updated projects files
- Improved docs on how to use this projects
- Added new scripts to manage ssh authorized keys
- Added UAC prompt for install_virtualhosts on Windows
- Added installation of nfs-utils and python3
- Added port forwarding for ftp protocol
- Changed how Apache read configs on VM
- Added other generic improvements

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+*tmp*
 *.log
+/.idea
 /.vagrant
 /config/apache/*.conf
-/config/hosts/tmp
 /settings.yaml
 /settings.windows.yaml
 /settings.darwin.yaml
