Improved provision script

--- a/config/apache/000-default.conf
+++ b/config/apache/000-default.conf
@@ -1,9 +1,8 @@
 <VirtualHost *:80>
     DocumentRoot /var/www
 
-    <Location "/">
-        AllowOverride All
-        Order allow,deny
-        Allow from all
-    </Location>
+    <Directory "/var/www">
+        AllowOverride None
+        Require all granted
+    </Directory>
 </VirtualHost>
